Fixed focus/visibility issue by creating a callback function after the js file has been loaded.  This functionality may change in the near future if I can think of a better solution.
git-svn-id: http://php-form-builder-class.googlecode.com/svn/trunk@321 18c9a15c-d092-11de-bb02-e302c5db49d5

--- a/style.css
+++ b/style.css
@@ -18,12 +18,13 @@ body, #pfbc_banner h2, #pfbc_banner h5 {
 	font-size: 14px;
 }
 
-.pfbc-main {
+.pfbc-form {
 	font-family: "American Typewriter";
 	font-size: 14px;
 	border: 1px solid #cccccc; 
 	background-color: #f5f4f4; 
-	padding: 10px; 
+	padding: 10px !important; 
+	display: inline-block;
 	-moz-border-radius: 8px; 
 	-webkit-border-radius: 8px;
 }
